--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,8 +15,8 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/permissionButton"
                 android:layout_width="wrap_content"
-                android:layout_margin="16dp"
-                android:text="permission"
+                android:layout_margin="@dimen/big_padding"
+                android:text="@string/permission"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/recyclerview_item"
                 android:padding="@dimen/big_padding"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="@dimen/_36dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
