--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -19,8 +19,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="ea molestias quasi exercitationem repellat qui ipsa sit aut"
-                android:layout_margin="16dp"
+                android:text="@string/ea_molestias_quasi_exercitationem_repellat_qui_ipsa_sit_aut"
+                android:layout_margin="@dimen/big_padding"
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -33,8 +33,8 @@
                 app:layout_constraintTop_toBottomOf="@id/title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="et iusto sed quo iure\nvoluptatem occaecati omnis eligendi aut ad\nvoluptatem doloribus vel accusantium quis pariatur\nmolestiae porro eius odio et labore et velit aut"
-                android:layout_margin="16dp"
+                android:text="@string/et_iusto_sed_quo_iure_nvoluptatem_occaecati_omnis_eligendi_aut_ad_nvoluptatem_doloribus_vel_accusantium_quis_pariatur_nmolestiae_porro_eius_odio_et_labore_et_velit_aut"
+                android:layout_margin="@dimen/big_padding"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 />
